--- a/src/containers/HomeBody.scss
+++ b/src/containers/HomeBody.scss
@@ -1,10 +1,25 @@
-.wrapper{
+.section-share{
     background-color: white;
-    height: 1000px;
-    .wrapper{
-        title{
-            justify-content: center;
+    height: 600px;
+    position: relative;
+    top: -77px;
+    left: 0;
+    .title{
+        text-align: center;
+        margin-bottom: -20px;
+        padding-top: 50px;
+        h2{
+            font-size: 36px;
+            text-transform: none;
+            letter-spacing: 0px;
+            font-weight: bold;
+            margin-top: -20px;
         }
-        
+        h5{
+            margin-top: -1px;
+            font-size: 15px;
+            color: #8D9199;
+        }
     }
+        
 }
