--- a/src/containers/HomeHeader.scss
+++ b/src/containers/HomeHeader.scss
@@ -82,16 +82,20 @@ video{
             color: red;
         }
     }
-    @media (max-width: 800px) {
-        .logo {
-            left: 20px; 
+}
+@media (max-width: 800px) {
+    .header{
+        .logo{
+            position: absolute;
+            top:10px;
+            left:10px;
+            width: 10px;
         }
-
-        .menuHeader {
+        .menuHeader{
             display: none;
         }
-        
     }
+    
 }
 
 
