--- a/src/containers/Sections/BestValueTrips.scss
+++ b/src/containers/Sections/BestValueTrips.scss
@@ -87,29 +87,53 @@
         }
     }
 
-    @media (max-width: 800px) {
+}
+@media (max-width: 800px) {
+    .BestValueTrips{
         .content {
             .row {
+                margin-left : 7px;
                 .PackageTour {
-                    margin: 10px;
+                    margin : 4px;
 
+                    img {
+                        width: 100%;
+                        height: 100px;
+                        cursor: pointer;
+                    }
+                    .sale {
+                        position: absolute;
+                        top: -16px;
+                        right: -16px;
+                        color: rgb(251, 251, 251);
+                        background-color: #1EC6B6;
+                        padding: 10px 7px 10px 7px;
+                        color: #fff;
+                        font-weight: 600;
+                        font-size: 7px;
+                        border-radius: 50%;
+                    }
                     .price {
-                        position: relative;
-                        font-size: 14px;
-                        padding-right: 10px;
-                        padding: 7px;
-                        top: -46px;
-                        left: 0px;
+                        top: 70px;
+                        left: -1px;
+                        font-size: 7px;
+                        .price-origin {
+                            font-size: 7px;
+                        }
                     }
+                    .rate{
+                        font-size: 7px;
 
+                    }
                     .nameTour {
-                        font-size: 18px;
-                        padding: 8px;
-                    }
+                        h4{
+                            font-size: 7px;
 
+                        }
+                    }
+        
                     .cityTour {
-                        font-size: 12px;
-                        padding-left: 8px;
+                        font-size: 7px;
                     }
                 }
             }
